--- a/live-react-refactor/package.json
+++ b/live-react-refactor/package.json
@@ -9,6 +9,8 @@
     "build:prod": "NODE_ENV=production webpack"
   },
   "dependencies": {
+    "classname": "^0.0.0",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
